# TC96_Debug

./: ActPage.qml  ActionsPage.qml  CMakeLists.txt  CurvePage.qml  DevicesPage.qml  ErrorLogPage.qml  LogPage.qml  LoginPage.qml  Main.qml  OperateLogPage.qml  OperatorPage.qml  ParamsPage.qml  README.md  TestLogPage.qml  main.cpp
Config/: CMakeLists.txt  Config.qml  datahandler.cpp  datahandler.h  registertoqml.cpp  registertoqml.h  signalmanager.cpp  signalmanager.h
CustomControls/: CMakeLists.txt  CusButton.qml  CusTableView.qml  DeviceButton.qml  OperationButton.qml  SwitchButton.qml  WaitingAnimationItem.qml
Executor/: CMakeLists.txt  acturator.cpp  acturator.h  acturator_args.h  basicparamwrapper.cpp  basicparamwrapper.h  blockpidWrapper.cpp  blockpidWrapper.h  calibratecompensationwrapper.cpp  calibratecompensationwrapper.h  canparamwrapper.cpp  canparamwrapper.h  cyclingcompensationwrapper.cpp  cyclingcompensationwrapper.h  datadef.h  executorfactory.cpp  executorfactory.h  executorwrapper.cpp  executorwrapper.h  heatlidoffwrapper.cpp  heatlidoffwrapper.h  heatlidonexecutorwrapper.cpp  heatlidonexecutorwrapper.h  heatlidpidwrapper.cpp  heatlidpidwrapper.h  lidCloseexecutorwrapper.cpp  lidCloseexecutorwrapper.h  lidopenexecutorwrapper.cpp  lidopenexecutorwrapper.h  rdmlexecutorwrapper.cpp  rdmlexecutorwrapper.h  resetexecutorwrapper.cpp  resetexecutorwrapper.h  service.cpp  service.h  signalmanager.cpp  signalmanager.h  startexecutorwrapper.cpp  startexecutorwrapper.h  stopexecutorwrapper.cpp  (+5 more)
HcControls/: CMakeLists.txt
HcControls/src/: CMakeLists.txt
HcControls/src/qml/Controls/: Constants.qml  EditButton.qml  HcButton.qml  HcDialog.qml  HcMessageDlg.qml  HcTextInput.qml
HcControls/src/qml/Controls/HcPcrControls/: HcPcr.qml  HcPcrStage.qml  HcPcrStep.qml
eds/: CMakeLists.txt  eds_master.c  eds_master.eds  eds_master.h  eds_master.od
log/: CMakeLists.txt
log/db/: databasetable.cpp  databasetable.h  errorlogtable.cpp  errorlogtable.h  logmng.cpp  logmng.h  operatelogtable.cpp  operatelogtable.h  testlogtable.cpp  testlogtable.h
log/ui/: errorlogmanager.cpp  errorlogmanager.h  operatelogmanager.cpp  operatelogmanager.h  testlogmanager.cpp  testlogmanager.h
